# ai-ppt-generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start_web.py
cli/: enhanced.py  main.py
config/: __init__.py  enhanced_settings.py  settings.py
core/: __init__.py  ai_client.py  ai_client_async.py  ai_common.py  enhanced_task_manager.py  ppt_plan.py  prompt_builder.py  task_manager.py  types.py
data/: history.db
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/common/: ThemeToggle.tsx
frontend/src/components/generate/: GenerateForm.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/stores/: generateStore.ts  index.ts  settingsStore.ts  uiStore.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
images/: .gitkeep
ppt/: animations.py  create_new_templates.py  create_premium_templates.py  create_style_templates.py  create_templates.py  editor.py  styles.py  template_manager.py  unified_builder.py
ppt/pptx_templates/: academic_latex.pptx  handdrawn_sketch.pptx  magazine_editorial.pptx  mckinsey_consulting.pptx  premium_corporate.pptx  premium_elegant_dark.pptx  premium_minimal_bw.pptx  premium_nature_green.pptx  premium_tech_blue.pptx  premium_warm_orange.pptx  style_bento_grid.pptx  style_bold_typography.pptx  style_card_stack.pptx  style_diagonal_split.pptx  style_geometric_mosaic.pptx  style_magazine_layout.pptx  swiss_style.pptx  yc_pitch_deck.pptx
scripts/: verify_fixes.py
tests/: conftest.py  test_blueprints.py  test_core.py  test_new_modules.py  test_ppt_builder.py  test_utils.py  test_web.py
utils/: api_key_manager.py  api_response.py  api_version.py  async_tasks.py  batch.py  cache.py  circuit_breaker.py  config_validator.py  error_handler.py  errors.py  export.py  file_parser.py  health.py  history.py  http_middleware.py  image_enhancer.py  image_providers.py  image_search.py  logger.py  metrics.py  openapi.py  performance.py  preview.py  rate_limit.py  request_context.py  retry.py  scheduler.py  security.py  smart_cache.py  sse.py  startup.py  structured_logging.py  template_preview.py  validators.py  webhook.py
web/: app.py
web/blueprints/: __init__.py  api.py  batch.py  common.py  export.py  ppt_edit.py  tasks.py
web/static/: index.html
web/static/assets/: index-DMPu8nTN.js
web/templates/: index.html
